# Investin-solana-programs

./: .gitignore  Cargo.toml  README.md  commands.md  package.json  readme1.md
.coderrect/logs/: log.current
.github/workflows/: soteria.yml
connect-wallet-and-transfer/: package.json
connect-wallet-and-transfer/src/: App.css  App.js
connect-wallet-and-transfer/src/components/: AdminControl.js  ClaimFee.js  Deposit.js  Escrow.js  GetPrices.js  IVN.js  InitialisedFund.js  MangoDeposit.js  MangoInitialize.js  MangoPlaceOrder.js  MangoWithdrawInvestor.js  MangoWithdrawToFund.js  SendGreating.js  Swap.js  Testing.js  Transfer.js  Withdraw.js  test.js  updatePrices.js
connect-wallet-and-transfer/src/utils/: constants.js  mango.js  pools.js  programLayouts.js  tokens.js  web3.js
frontend/: .env.devnet  .env.production  .env.production2  README.md  package.json  update_node_mods.sh
frontend/src/: App.js
frontend/src/components/: AdminControl.js  AllFundsInvestors.js  ClaimFee.js  ConnectWalletModal.js  Deposit.js  DisplayInfo.js  FriktionDeposit.js  GetPrices.js  InitForceSettle.js  InitialisedFund.js  MangoInitialize.js  MangoMigration.js  MangoPlaceOrder.js  MigrateFundState.js  OrcaSwap.js  ProcessDeposits.js  ProcessWithdraws.js  Swap.js  Testing.js  Transfer.js  UpdateAllFundTokenPrices.js  Withdraw.js  test.js  updatePrices.js
frontend/src/utils/: MangoLayout.js  constants.js  mango.js  pools.js  programLayouts.js  tokens.js  web3.js
program-mm/: Cargo.toml
program-mm/src/: instruction.rs  processor.rs  state.rs
program-mm/tests/: test_claim_performance_fee.rs  test_init.rs  test_investor_deposit.rs  test_investor_request_withdraw.rs  test_investor_withdraw.rs  test_process_deposit.rs  test_process_withdraw.rs
program-mm/tests/helpers/: mod.rs
programs/program-aggregator/: Cargo.toml
programs/program-aggregator/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/program-fund/: Cargo.toml
programs/program-fund/src/: entrypoint.rs  error.rs  friktion_utils.rs  instruction.rs  jup_utils.rs  lib.rs  mango_utils.rs  processor.rs  route.rs  state.rs  tokens.rs
programs/program-ivn/: Cargo.toml
programs/program-ivn/src/: lib.rs
programs/program-mm/: Cargo.toml
programs/program-mm/src/: entrypoint.rs  error.rs  hfi.rs  instruction.rs  lib.rs  mango_utils.rs  mmi.rs  processor.rs  state.rs
src/client/: hello_world.ts  hello_world_token.ts  liquidity.ts  main.ts  pools.ts  store.ts  swap.ts  tokens.ts  web3.ts
src/program-aggregator/: Cargo.toml
src/program-aggregator/src/: lib.rs
src/program-fund/: Cargo.toml
src/program-fund/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/program-rust/src/: deposit.rs  entrypoint.rs  lib.rs  withdraw.rs
src/program-rust/src/Sample/: deposit.rs  entrypoint.rs  lib.rs  withdraw.rs
src/program-rust/src/textupdate/: textupdate.rs
src/program-rust/src/transfer-lamports/: lib.rs  processor.rs
src/program-tokenfund/: cargo.toml
src/program-tokenfund/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
web/: README.md  package.json
web/src/components/: ClaimFee.js  ConnectWalletModal.js  Testing.js
web/src/utils/: programLayouts.js  tokens.js  web3.js
