[package]
name = "mm"
version = "0.0.2"
description = "Investin Market Making Fund"
repository = "https://github.com/Investin-pro/Solana"
license = "Apache-2.0"
homepage = "https://investin.pro/"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "^1.7.10"
arrayref = "^0.3.6"
serde = "^1.0.118"
bs58 = "0.4.0"
bytemuck = "^1.7.2"
bincode = "^1.3.1"
fixed = { version = "1.11.0", features = ["serde"] }
fixed-macro = "^1.1.1"
enumflags2 = "^0.6.4"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
mango = { version = "^3.4.3", git = "https://github.com/blockworks-foundation/mango-v3.git", default-features=false, features = ["no-entrypoint", "client"], branch="main" }
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }




[dev-dependencies]
solana-program-test = "^1.6.4"

[lib]
name = "mm"
crate-type = ["cdylib", "lib"]
