[package]
name = "aggregator"
version = "0.0.1"
description = "Program which aggregates prices from different on-chain pools"
repository = "https://github.com/Investin-pro/Solana"
license = "Apache-2.0"
homepage = "https://investin.pro/"
edition = "2018"

[dependencies]
solana-program = "=1.6.8"
bytemuck = "^1.4.1"
arrayref = "^0.3.6"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
fixed = { version = "^1.7.0", features=["serde"] }
fixed-macro = "^1.1.1"

[dev-dependencies]
solana-program-test = "=1.6.8"
solana-sdk = "=1.6.8"

[lib]
name = "investin"
crate-type = ["cdylib", "lib"]
