[package]
name = "fund"
version = "0.0.1"
description = "Investin Fund Contract"
repository = "https://github.com/Investin-pro/Solana"
license = "Apache-2.0"
homepage = "https://investin.pro/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.8.1"
borsh-derive = "0.8.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.6.8"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
arrayref = "^0.3.6"
bytemuck = "^1.4.1"
serde = "^1.0.118"
fixed = { version = "^1.7.0", features=["serde"] }
fixed-macro = "^1.1.1"
serum_dex = { version = "^0.3", git = "https://github.com/blockworks-foundation/serum-dex.git", features=["no-entrypoint", "program"] }ß
mango = { version = "^2.0.0", git = "https://github.com/blockworks-foundation/mango.git", features=["no-entrypoint", "devnet"], branch = "main" }
flux-aggregator = { version = "^0.1", git = "https://github.com/blockworks-foundation/solana-flux-aggregator.git", features=["program", "no-entrypoint"] }
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.2"

[dev-dependencies]
solana-program-test = "=1.6.8"
solana-sdk = "=1.6.8"

[lib]
name = "fund"
crate-type = ["cdylib", "lib"]
