[package]
name = "fund"
version = "0.0.3"
description = "Investin Fund Contract"
repository = "https://github.com/Investin-pro/Solana"
license = "Apache-2.0"
homepage = "https://investin.pro/"
edition = "2018"

[features]
no-entrypoint = []
devnet = []

[dependencies]
borsh = "=0.9.1"
borsh-derive = "=0.9.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9.15"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
arrayref = "^0.3.6"
bytemuck = "^1.4.1"
bincode = "^1.3.1"
serde = "^1.0.118"
fixed = { version = "=1.11.0", features=["serde"] }
fixed-macro = "^1.1.1"
volt-abi = {version = "0.1.0", git = "https://github.com/zoheb-mzs/FriktionExternal", features = ["cpi"] }
serum_dex = { version = "=0.5.5", git = "https://github.com/blockworks-foundation/serum-dex.git", features=["no-entrypoint", "program"] }
mango = {  version = "3.4.2", git = "https://github.com/zoheb-mzs/mango-v3.git", default-features=false, features = ["no-entrypoint"], branch="working-branch" }
flux-aggregator = { version = "^0.1", git = "https://github.com/blockworks-foundation/solana-flux-aggregator.git", features=["program", "no-entrypoint"] }
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.2"
anchor-lang = "0.24.2"


[lib]
name = "fund"
crate-type = ["cdylib", "lib"]