
[package]
name = "ivnswap"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "^1.6.4"
bytemuck = "^1.4.1"
arrayref = "^0.3.6"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}


[dev-dependencies]
solana-sdk = "^1.6.4"
solana-program-test = "^1.6.4"

[lib]
name = "ivnswap"
crate-type = ["cdylib", "lib"]
