[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
solana-program = "=1.6.8"
bytemuck = "^1.4.1"
arrayref = "^0.3.6"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
fixed = { version = "^1.7.0", features=["serde"] }
fixed-macro = "^1.1.1"

[dev-dependencies]
solana-program-test = "=1.6.8"
solana-sdk = "=1.6.8"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
