[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.8.1"
borsh-derive = "0.8.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.6.8"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
arrayref = "^0.3.6"
bytemuck = "^1.4.1"
serde = "^1.0.118"
fixed = { version = "^1.7.0", features=["serde"] }
fixed-macro = "^1.1.1"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "=1.6.8"
solana-sdk = "=1.6.8"

[lib]
name = "investin"
crate-type = ["cdylib", "lib"]
